--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
     <title>Pokedex</title>
 </head>
 <body>
-    <h1>list of pokemon</h1>
+    <h1>POKEDEX</h1>
 
-<div class= "pokedex">
-    <div class="pokemon-info"></div>
-    <div class = "pokemon-list-container"></div>
-</div>
+    <div class= "pokedex">
+      <div class="pokemon-name"></div>
+      <div class="pokemon-pic"></div>
+      <div class="pokemon-info"></div>
+      <div class = "pokemon-list-container"></div>
+    </div>
 <script src="script/pokeinfo.js"></script>
 </body>
 </html>
